contact us page completed

--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -185,4 +185,14 @@
 			display: none;
 		}
 	}
+
+	.chat-button {
+		position: absolute;
+		right: 71px;
+		margin-top: 190px;
+
+		@media screen and (max-width: 600px) {
+			display: none;
+		}
+	}
 }
