--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -1,93 +1,143 @@
 .header {
-	position: absolute;
-	height: 120px;
-	background: transparent;
-	color: white;
-	display: flex;
-	width: 100%;
-	z-index: 99;
+  position: absolute;
+  height: 120px;
+  background: transparent;
+  color: white;
+  display: flex;
+  width: 100%;
+  z-index: 99;
 
-	&-container {
-		min-width: 1000px;
-		margin: auto;
-		display: flex;
-	}
+  &-container {
+    min-width: 1000px;
+    margin: auto;
+    display: flex;
+  }
 
-	&-logo {
-		height: 30px;
-		margin: auto;
-		cursor: pointer;
-	}
+  &-logo {
+    height: 30px;
+    margin: auto;
+    cursor: pointer;
+  }
 
-	&-menu {
-		display: flex;
-		margin: auto;
+  &-menu {
+    display: flex;
+    margin: auto;
 
-		a {
-			margin-right: 60px;
-			cursor: pointer;
-		}
+    a {
+      margin-right: 60px;
+      cursor: pointer;
+    }
 
-		a:last-child {
-			margin-right: 0;
-		}
-	}
+    a:last-child {
+      margin-right: 0;
+    }
+  }
 
-	&-button {
-		margin-left: auto;
-		width: 128px;
-		height: 48px;
-		background: white;
-		font-family: 'Graphik';
-		font-size: 16px;
-		line-height: 18px;
-		text-align: center;
-		color: #363636;
-		border-radius: 5px;
-		display: flex;
-		cursor: pointer;
-	}
+  &-button {
+    margin-left: auto;
+    width: 128px;
+    height: 48px;
+    background: white;
+    font-family: 'Graphik';
+    font-size: 16px;
+    line-height: 18px;
+    text-align: center;
+    color: #363636;
+    border-radius: 5px;
+    display: flex;
+    cursor: pointer;
+  }
 
-	&-button:hover {
-		background-color: #dff5ef;
-	}
+  &-mobile-button {
+    font-family: 'Graphik';
+    font-size: 16px;
+    line-height: 18px;
+    padding: 10px;
+    background: #363636;
+    border: 1px solid #363636;
+    border-radius: 5px;
+  }
 
-	.burger-button {
-		display: none;
-	}
+  &-button:hover {
+    background-color: #dff5ef;
+  }
+
+  .burger-button {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 600px) {
-	.header {
-		&-container {
-			min-width: 300px;
-			margin-left: 28px;
-			margin-top: 58px;
-			display: flex;
-		}
+  .header {
+    &.white {
+      background: white;
+      height: 80px;
+      position: fixed;
+      z-index: 99999;
+      -webkit-animation: fadein 1s;
+      -moz-animation: fadein 1s;
+      -ms-animation: fadein 1s;
+      -o-animation: fadein 1s;
+      animation: fadein 1s;
+    }
 
-		&-logo {
-			height: 30px;
-			margin: 0;
-			cursor: pointer;
-		}
+    @keyframes fadein {
+      from {
+        opacity: 0;
+      }
 
-		&-menu {
-			display: none;
-		}
+      to {
+        opacity: 1;
+      }
+    }
 
-		&-button {
-			display: none;
-		}
+    &-container {
+      min-width: 320px;
+      margin-left: 28px;
+      margin-top: 44px;
+      display: flex;
 
-		.burger-button {
-			margin-left: auto;
-			margin-top: 5px;
-			display: block;
-			width: 30px;
-			height: 20px;
-			background: url('../../assets/img/hamburger.png') no-repeat center center;
-			background-size: 100% 100%;
-		}
-	}
+      &.white {
+        margin-top: 28px;
+      }
+    }
+
+    &-container-white {
+      margin-top: 28px;
+    }
+
+    &-logo {
+      height: 30px;
+      margin: 0;
+      cursor: pointer;
+    }
+
+    &-menu {
+      display: none;
+    }
+
+    &-button {
+      display: none;
+    }
+
+    &-mobile-button {
+      margin-left: auto;
+      margin-top: -5px;
+    }
+
+    .burger-button {
+      margin-left: auto;
+      margin-top: 5px;
+      display: block;
+      width: 30px;
+      height: 20px;
+      background: url('../../assets/img/hamburger.png') no-repeat center center;
+      background-size: 100% 100%;
+
+      &.white {
+        background: url('../../assets/img/hamburger_gray.png') no-repeat center center;
+        margin-left: 35px;
+      }
+    }
+  }
 }
