--- a/src/pages/howitworks/style.scss
+++ b/src/pages/howitworks/style.scss
@@ -272,6 +272,9 @@
       background: linear-gradient(180deg, rgba(54, 54, 54, 0) 0%, rgba(54, 54, 54, 0.6) 100%);
       width: 100%;
       height: 575px;
+      @media screen and (max-width: 600px) {
+        height: 375px;
+      }
     }
     &-panel{
       background: #FFFFFF;
@@ -334,6 +337,10 @@
       &::-webkit-scrollbar {
         width: 0px; 
         background: transparent;
+      }
+
+      @media screen and (max-width: 600px) {
+        margin-bottom:35px;
       }
       &-img{
         height: 46px;
