--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -1,198 +1,207 @@
 .footer {
-	color: white;
-	background: #363636;
-	height: 393px;
-	display: flex;
-	padding-top: 77px;
-	padding-left: 128px;
-	padding-right: 130px;
+  color: white;
+  background: #363636;
+  height: 393px;
+  display: flex;
+  padding-top: 77px;
+  padding-left: 128px;
+  padding-right: 130px;
 
-	@media screen and (max-width: 600px) {
-		padding: 0px;
-		display: block;
-		height: 650px;
-	}
+  @media screen and (max-width: 600px) {
+    padding: 0px;
+    display: block;
+    height: 660px;
+  }
 
-	&-col-1 {
-		@media screen and (max-width: 600px) {
-			display: flex;
-		}
+  &-col-1 {
+    @media screen and (max-width: 600px) {
+      display: flex;
+    }
 
-		&-1 {
-			font-family: 'Graphik';
-			font-size: 16px;
-			line-height: 25px;
-			width: 120px;
+    &-1 {
+      font-family: 'Graphik';
+      font-size: 16px;
+      line-height: 25px;
+      width: 120px;
 
-			* {
-				margin-top: 5px;
-			}
+      * {
+        margin-top: 5px;
+      }
 
-			*:first-child {
-				margin-bottom: 10px;
-			}
+      *:first-child {
+        margin-bottom: 10px;
+      }
 
-			@media screen and (max-width: 600px) {
-				width: 300px;
-				padding: 25px;
-				padding-right: 0;
-			}
-		}
+      @media screen and (max-width: 600px) {
+        width: 50%;
+        padding: 25px;
+        padding-right: 0;
+        font-family: 'Graphik';
+        font-size: 16px;
+        line-height: 25px;
+      }
+    }
 
-		.languages-select {
-			width: 84px;
-			height: 10px;
-			display: none;
+    .languages-select {
+      height: 30px;
+      display: none;
 
-			@media screen and (max-width: 600px) {
-				display: block;
-				margin-top: 47px;
-				margin-right: 53px;
-			}
-		}
+      @media screen and (max-width: 600px) {
+        display: flex;
+        margin-top: 47px;
+        margin-right: 53px;
+      }
+    }
 
-		.language-dropdown {
-			font-size: 10px;
-			line-height: 10px;
-			background: #363636;
-			color: white;
+    .language-dropdown {
+      font-size: 10px;
+      line-height: 10px;
+      background: #363636;
+      color: white;
+			width: 82px;
 
-			&-control {
-				font-size: 8px;
-				line-height: 15px;
-				background: #363636;
-				color: white;
-				border: none;
-			}
+      &-control {
+        font-size: 8px;
+        line-height: 15px;
+        background: #363636;
+        color: white;
+        border: none;
+      }
 
-			&-arrow {
-				font-size: 4px;
-				width: 5px;
-			}
-		}
-	}
+      &-arrow {
+        font-size: 4px;
+        width: 5px;
+      }
+    }
+  }
 
-	&-col-2,
-	&-col-3 {
-		* {
-			margin-top: 21px;
-		}
+  &-col-2,
+  &-col-3 {
+    font-family: 'Graphik Semibold';
 
-		*:first-child {
-			margin-top: 0;
-			color: #a7a7a7;
-		}
-	}
+    * {
+      margin-top: 21px;
+    }
 
-	&-col-2 {
-		margin-left: auto;
+    *:first-child {
+      margin-top: 0;
+      color: #a7a7a7;
+    }
+  }
 
-		@media screen and (max-width: 600px) {
-			margin-left: 0;
+  &-col-2 {
+    margin-left: auto;
 
-			*:nth-child(n + 2) {
-				margin-top: 33px;
-			}
-		}
-	}
+    @media screen and (max-width: 600px) {
+      margin-left: 0;
 
-	&-col-3 {
-		margin-left: auto;
-		margin-right: auto;
+      *:nth-child(n + 2) {
+        margin-top: 33px;
+      }
+    }
+  }
 
-		@media screen and (max-width: 600px) {
-			*:nth-child(n + 2) {
-				margin-top: 27px;
-			}
-		}
-	}
+  &-col-3 {
+    margin-left: auto;
+    margin-right: auto;
 
-	&-col-4 {
-		margin-left: auto;
-		width: 337px;
+    @media screen and (max-width: 600px) {
+      *:nth-child(n + 2) {
+        margin-top: 27px;
+      }
+    }
+  }
 
-		@media screen and (max-width: 600px) {
-			// display: none;
-			border-top: 1px solid #696969;
-			margin: 0;
-			width: 100%;
-			padding: 20px;
-		}
+  &-col-4 {
+    margin-left: auto;
+    width: 337px;
 
-		.subscribe-text {
-			font-family: 'Graphik';
-			font-size: 16px;
-			line-height: 120%;
-			width: 270px;
-		}
+    @media screen and (max-width: 600px) {
+      // display: none;
+      border-top: 1px solid #696969;
+      margin: 0;
+      width: 100%;
+      padding: 20px;
+    }
 
-		.subscribe-input {
-			margin-top: 27px;
-			display: flex;
+    .subscribe-text {
+      font-family: 'Graphik';
+      font-size: 16px;
+      line-height: 120%;
+      width: 270px;
+    }
 
-			.subscribe-mail {
-				background: #616161;
-				padding-left: 25px;
-				padding-top: 10px;
-				height: 45px;
-				border-radius: 3px;
-				width: 220px;
+    .subscribe-input {
+      margin-top: 27px;
+      display: flex;
 
-				input {
-					font-size: 12px;
-					line-height: 126%;
-					letter-spacing: 0.02em;
-					color: #bfbfbf;
-					background: transparent;
-					outline: none;
-					border: none;
-					width: 180px;
-				}
-			}
+      .subscribe-mail {
+        background: #616161;
+        padding-left: 25px;
+        padding-top: 10px;
+        height: 45px;
+        border-radius: 3px;
+        width: 220px;
 
-			.subscribe-button {
-				width: 100px;
-				margin-left: 15px;
-				background: #7cb342;
-				border-radius: 4px;
-				color: white;
-				text-align: center;
-				line-height: 45px;
-				font-size: 12px;
-				cursor: pointer;
-			}
+        input {
+          font-size: 12px;
+          line-height: 126%;
+          letter-spacing: 0.02em;
+          color: #bfbfbf;
+          background: transparent;
+          outline: none;
+          border: none;
+          width: 180px;
+        }
+      }
 
-			.subscribe-button:hover {
-				background-color: #94bf66;
-			}
-		}
-	}
+      .subscribe-button {
+        width: 100px;
+        margin-left: 15px;
+        background: #7cb342;
+        border-radius: 4px;
+        color: white;
+        text-align: center;
+        line-height: 45px;
+        font-size: 12px;
+        cursor: pointer;
+      }
 
-	.mobile-layout {
-		display: none;
+      .subscribe-button:hover {
+        background-color: #94bf66;
+      }
+    }
+  }
 
-		@media screen and (max-width: 600px) {
-			display: flex;
-			padding: 25px;
-		}
-	}
+  .mobile-layout {
+    display: none;
 
-	.desktop-layout {
-		display: flex;
-		margin-left: auto;
+    @media screen and (max-width: 600px) {
+      display: flex;
+      padding: 25px;
+    }
+  }
 
-		@media screen and (max-width: 600px) {
-			display: none;
-		}
-	}
+  .desktop-layout {
+    display: flex;
+    margin-left: auto;
 
-	.chat-button {
-		position: absolute;
-		right: 71px;
-		margin-top: 190px;
+    @media screen and (max-width: 600px) {
+      display: none;
+    }
+  }
 
-		@media screen and (max-width: 600px) {
-			display: none;
-		}
-	}
+  .chat-button {
+    position: absolute;
+    right: 71px;
+    margin-top: 190px;
+    cursor: pointer;
+    img{
+      width: 100%;
+      height: 100%;
+    }
+    @media screen and (max-width: 600px) {
+      display: none;
+    }
+  }
 }
