--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -6,11 +6,26 @@
   display: flex;
   width: 100%;
   z-index: 99;
+  position: fixed;
+  font-family: 'Graphik';
+
+  &.white {
+    background: white;
+    color: #363636;
+    height: 94px;
+    -webkit-animation: fadein 1s;
+    -moz-animation: fadein 1s;
+    -ms-animation: fadein 1s;
+    -o-animation: fadein 1s;
+    animation: fadein 1s;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
+  }
 
   &-container {
     min-width: 1000px;
     margin: auto;
     display: flex;
+
   }
 
   &-logo {
@@ -26,10 +41,26 @@
     a {
       margin-right: 60px;
       cursor: pointer;
+      color: white;
+
+      &:hover {
+        text-decoration: none;
+        color: #363636;
+      }
     }
 
     a:last-child {
       margin-right: 0;
+    }
+
+    &.white {
+      a {
+        color: #363636;
+
+        &:hover {
+          color: #7cb342;
+        }
+      }
     }
   }
 
@@ -46,6 +77,21 @@
     border-radius: 5px;
     display: flex;
     cursor: pointer;
+
+    &.white {
+      color: white;
+      background: #363636;
+
+      &:hover {
+        color: white;
+        background: #363636;
+      }
+    }
+
+    &:hover {
+      background: white;
+      color: #363636;
+    }
   }
 
   &-mobile-button {
@@ -58,9 +104,6 @@
     border-radius: 5px;
   }
 
-  &-button:hover {
-    background-color: #dff5ef;
-  }
 
   .burger-button {
     display: none;
@@ -74,6 +117,7 @@
       height: 80px;
       position: fixed;
       z-index: 99999;
+      height: 75px;
       -webkit-animation: fadein 1s;
       -moz-animation: fadein 1s;
       -ms-animation: fadein 1s;
@@ -81,24 +125,19 @@
       animation: fadein 1s;
     }
 
-    @keyframes fadein {
-      from {
-        opacity: 0;
-      }
 
-      to {
-        opacity: 1;
-      }
-    }
 
     &-container {
-      min-width: 320px;
+      min-width: auto;
       margin-left: 28px;
       margin-top: 44px;
       display: flex;
+      width: 100%;
 
       &.white {
-        margin-top: 28px;
+        margin-top: auto;
+        margin-bottom: auto;
+        height: 48px;
       }
     }
 
@@ -107,8 +146,10 @@
     }
 
     &-logo {
-      height: 30px;
-      margin: 0;
+      height: 27px;
+      margin-top: 10px;
+      margin-left: 0;
+      margin-right: 0;
       cursor: pointer;
     }
 
@@ -116,18 +157,23 @@
       display: none;
     }
 
-    &-button {
-      display: none;
-    }
 
-    &-mobile-button {
+
+    &-button {
       margin-left: auto;
       margin-top: -5px;
+
+      &.white {
+        background: #363636;
+        color: white;
+        margin-top: 0;
+      }
     }
 
     .burger-button {
-      margin-left: auto;
-      margin-top: 5px;
+      margin-left: 15px;
+      margin-right: 25px;
+      margin-top: 14px;
       display: block;
       width: 30px;
       height: 20px;
@@ -136,8 +182,18 @@
 
       &.white {
         background: url('../../assets/img/hamburger_gray.png') no-repeat center center;
-        margin-left: 35px;
+        margin-left: 15px;
       }
     }
+  }
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
   }
 }
