--- a/src/pages/assets/colours/style.scss
+++ b/src/pages/assets/colours/style.scss
@@ -48,7 +48,7 @@
         line-height: 25px;
         color: #363636;
         margin-bottom: 15px;
-        width: 312px;
+        width: 527px;
 
         @media screen and (max-width: 600px) {
           font-size: 14px;
@@ -81,13 +81,15 @@
         .card {
           width: 252px;
           background: white;
-          box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, 0.1);
           margin: 30px;
+          border: none;
+          z-index: -1;
 
           @media screen and (max-width: 600px) {
             margin-top: 60px;
             margin-left: auto;
             margin-right: auto;
+            width: 200px;
           }
 
           &-img {
@@ -96,6 +98,11 @@
             display: flex;
             justify-content: center;
             border-radius: 0;
+            box-shadow: 0px 20px 11px -4px rgba(0, 0, 0, 0.1);
+
+            @media screen and (max-width: 600px) {
+              height: 200px;
+            }
           }
 
           &-title {
@@ -104,6 +111,7 @@
             text-align: center;
             line-height: 40px;
             color: #6a6a6a;
+            margin-top: 20px;
           }
         }
       }
