--- a/src/pages/assets/logo/style.scss
+++ b/src/pages/assets/logo/style.scss
@@ -82,7 +82,8 @@
           background: white;
           box-shadow: 0px 4px 20px 3px rgba(0, 0, 0, 0.1);
           margin: 30px;
-
+          z-index: -1;
+          
           @media screen and (max-width: 600px) {
             margin-top: 60px;
             margin-left: auto;
