--- a/src/pages/assets/menu/style.scss
+++ b/src/pages/assets/menu/style.scss
@@ -1,85 +1,92 @@
 .assets-menu {
-	background: #f9fafc;
-	border-radius: 15px;
-	width: 326px;
-	height: 655px;
-	text-align: left;
-	padding: 15px;
-	margin-bottom: 20px;
-	@media screen and (max-width: 600px) {
-		display: none;
-	}
+  background: #f9fafc;
+  border-radius: 15px;
+  width: 326px;
+  height: 655px;
+  text-align: left;
+  padding: 15px;
+  margin-bottom: 20px;
 
-	&-mobile {
-		display: none;
+  @media screen and (max-width: 600px) {
+    display: none;
+  }
 
-		@media screen and (max-width: 600px) {
-			background: #f9fafc;
-			display: block;
-			padding: 0;
-			height: 53px;
-			padding: 15px 25px;
-			position: fixed;
-			width: 100%;
-			.assets-menu-mobile-item {
-				margin-right: 20px;
-				color: #363636;
-				text-decoration: none;
+  &-mobile {
+    display: none;
 
-				&:first-child {
-					color: #88d20f;
-				}
+    &.scroll {
+      box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.25);
+    }
 
-				&:after {
-					content: '';
-					position: absolute;
-					background: url('../../../assets/img/menu_mobile_split.png') no-repeat center center;
-					background-size: 100% 100%;
-					width: 11px;
-					height: 26px;
-					margin-left:3px;
-				}
-			}
-		}
-	}
+    @media screen and (max-width: 600px) {
+      background: #f9fafc;
+      display: block;
+      padding: 0;
+      height: 53px;
+      padding: 15px 25px;
+      position: fixed;
+      width: 100%;
+      top: 75px;
 
-	&-heading {
-		font-family: 'Graphik';
-		font-size: 12px;
-		line-height: 120%;
-		color: #88d20f;
-		margin-bottom: 14px;
-		padding-left: 18px;
-		padding-top: 25px;
-	}
+      .assets-menu-mobile-item {
+        margin-right: 20px;
+        color: #363636;
+        text-decoration: none;
 
-	&-item {
-		padding: 8px 17px;
-		font-family: 'Graphik';
-		font-size: 14px;
-		line-height: 25px;
-		border-radius: 5px;
-		width: 100%;
-		color: #363636;
-		cursor: pointer;
+        &:first-child {
+          color: #88d20f;
+        }
 
-		span {
-			margin-left: 10px;
-		}
+        &:after {
+          content: '';
+          position: absolute;
+          background: url('../../../assets/img/menu_mobile_split.png') no-repeat center center;
+          background-size: 100% 100%;
+          width: 11px;
+          height: 26px;
+          margin-left: 3px;
+        }
+      }
+    }
+  }
 
-		&.active {
-			background: #7cb342;
-			color: white;
-		}
+  &-heading {
+    font-family: 'Graphik';
+    font-size: 12px;
+    line-height: 120%;
+    color: #88d20f;
+    margin-bottom: 14px;
+    padding-left: 18px;
+    padding-top: 25px;
+  }
 
-		&:hover {
-			background: #eff2f7;
-			color: #363636;
-		}
+  &-item {
+    padding: 8px 17px;
+    font-family: 'Graphik';
+    font-size: 14px;
+    line-height: 25px;
+    border-radius: 5px;
+    width: 100%;
+    color: #363636;
+    cursor: pointer;
 
-		&.child {
-			margin-left: 31px;
-			width: calc(100% - 31px);
-		}
-	}
+    span {
+      margin-left: 10px;
+    }
+
+    &.active {
+      background: #7cb342;
+      color: white;
+    }
+
+    &:hover {
+      background: #eff2f7;
+      color: #363636;
+    }
+
+    &.child {
+      margin-left: 31px;
+      width: calc(100% - 31px);
+    }
+  }
 }
