--- a/src/pages/careers/style.scss
+++ b/src/pages/careers/style.scss
@@ -5,7 +5,7 @@
 
   @media screen and (max-width: 600px) {
     background: url('../../assets/img/careers_back_mobile.png') no-repeat center center;
-    background-position: top 269px center;
+    background-position: top 318px center;
   }
 
   .section-1 {
@@ -38,7 +38,7 @@
       background: #88d20f;
       color: white;
       border-radius: 5px;
-      font-family: Graphik;
+      font-family: 'Graphik';
       font-size: 18px;
       line-height: 20px;
       text-align: center;
@@ -72,13 +72,13 @@
       font-size: 36px;
       line-height: 40px;
       text-align: left;
-      color: #2b4403;
+      color: #2f2f2f;
       margin-bottom: 29px;
 
       @media screen and (max-width: 600px) {
         font-size: 24px;
         line-height: 50px;
-        color: #2b4403;
+        color: #2f2f2f;
         text-align: center;
         margin-bottom: 10px;
       }
@@ -187,14 +187,14 @@
       font-size: 36px;
       line-height: 40px;
       text-align: center;
-      color: #2b4403;
+      color: #2f2f2f;
 
       @media screen and (max-width: 600px) {
         font-size: 24px;
         line-height: 26px;
         text-align: center;
 
-        color: #2b4403;
+        color: #2f2f2f;
       }
     }
 
@@ -271,7 +271,7 @@
       font-size: 36px;
       line-height: 40px;
       text-align: center;
-      color: #2b4403;
+      color: #2f2f2f;
 
       @media screen and (max-width: 600px) {
         font-size: 24px;
@@ -333,7 +333,8 @@
           font-weight: bold;
           font-size: 20px;
           line-height: 35px;
-          color: #2b4403;
+          color: #2f2f2f;
+          font-family: 'Graphik';
         }
 
         &-desc {
@@ -446,7 +447,7 @@
       &-button {
         background: #7cb342;
         border-radius: 5px;
-        font-family: Muli;
+        font-family: 'Graphik';
         font-style: normal;
         font-weight: bold;
         font-size: 16px;
