--- a/src/pages/developers/home/style.scss
+++ b/src/pages/developers/home/style.scss
@@ -30,8 +30,7 @@
 		&-img {
 			width: 43px;
 			height: 34px;
-			background: url('../../../assets/img/step.png');
-			background-size: 100% 100%;
+			color: #88d20f;
 		}
 
 		&-title {
