--- a/src/pages/developers/overview/style.scss
+++ b/src/pages/developers/overview/style.scss
@@ -1,6 +1,6 @@
 .developers-overview {
   margin-left: 80px;
-
+  padding-top: 20px;
   @media screen and (max-width: 600px) {
     margin-left: 30px;
     margin-right: 30px;
