--- a/src/pages/howitworks/style.scss
+++ b/src/pages/howitworks/style.scss
@@ -18,7 +18,7 @@
       font-size: 60px;
       line-height: 125%;
       text-align: center;
-      color: #19381F;
+      color: #363636;
       margin-bottom: 33px;
 
       @media screen and (max-width: 600px) {
