--- a/src/components/header2/style.scss
+++ b/src/components/header2/style.scss
@@ -11,7 +11,12 @@
 	
 	&.scroll{
 		box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.25);		
-	}
+    &.scroll-desktop{
+      @media screen and (max-width: 600px){
+        box-shadow: none;
+      }
+    }
+  }
   &-container {
     min-width: 1000px;
     margin: auto;
