--- a/src/pages/contactus/style.scss
+++ b/src/pages/contactus/style.scss
@@ -1,15 +1,18 @@
 .contact-us {
+	overflow: auto;
 	.section-1 {
-		height: 179px;
-		padding-top: 79px;
+		padding-top: 30px;
+		padding-bottom: 30px;
 		font-family: 'Graphik';
 		font-size: 46px;
 		line-height: 150%;
+		margin-top: 120px;
 		color: #363636;
 		background: white;
 		text-align: center;
 
 		@media screen and (max-width: 600px) {
+			margin-top: 80px;
 			font-size: 30px;
 			line-height: 33px;
 			height: 106px;
