--- a/src/pages/platform/style.scss
+++ b/src/pages/platform/style.scss
@@ -3,8 +3,8 @@
   @media screen and (max-width: 600px) {}
 
   .section-1 {
-    padding-top: 159px;
-    padding-bottom: 81px;
+    padding-top: 179px;
+    padding-bottom: 61px;
     text-align: center;
     justify-content: center;
     color: white;
@@ -17,8 +17,8 @@
 
     &-title {
       font-family: 'Graphik';
-      font-size: 46px;
-      line-height: 57px;
+      font-size: 84px;
+      line-height: 150%;
       text-align: center;
       color: white;
       margin-bottom: 39px;
@@ -52,9 +52,9 @@
         position: absolute;
         background: url('../../assets/img/platform_back_1.png') no-repeat center center;
         background-size: 100% 100%;
-        width: 90px;
-        height: 40px;
-        left: 230px;
+        width: 120px;
+        height: 60px;
+        left: 270px;
         margin-top: -20px;
 
         @media screen and (max-width: 600px) {
@@ -72,10 +72,10 @@
         position: absolute;
         background: url('../../assets/img/platform_back_2.png') no-repeat center center;
         background-size: 100% 100%;
-        width: 120px;
-        height: 60px;
+        width: 160px;
+        height: 90px;
         right: 223px;
-        margin-top: -130px;
+        margin-top: -190px;
 
         @media screen and (max-width: 600px) {
           position: absolute;
@@ -92,10 +92,10 @@
         position: absolute;
         background: url('../../assets/img/platform_shopify_img1.png') no-repeat center center;
         background-size: 100% 100%;
-        width: 115px;
-        height: 115px;
+        width: 155px;
+        height: 155px;
         left: 112px;
-        margin-top: -130px;
+        margin-top: -230px;
 
         @media screen and (max-width: 600px) {
           position: absolute;
@@ -112,10 +112,10 @@
         position: absolute;
         background: url('../../assets/img/platform_shopify_img2.png') no-repeat center center;
         background-size: 100% 100%;
-        width: 150px;
-        height: 168px;
+        width: 160px;
+        height: 178px;
         right: 88px;
-        margin-top: -80px;
+        margin-top: -90px;
 
         @media screen and (max-width: 600px) {
           position: absolute;
@@ -132,7 +132,7 @@
         display: none;
 
         @media screen and (max-width: 600px) {
-					display: block;
+          display: block;
           position: absolute;
           background: url('../../assets/img/platform_mobile_5.png') no-repeat center center;
           background-size: 100% 100%;
@@ -148,7 +148,7 @@
         display: none;
 
         @media screen and (max-width: 600px) {
-					display: block;
+          display: block;
           position: absolute;
           background: url('../../assets/img/platform_mobile_6.png') no-repeat center center;
           background-size: 100% 100%;
@@ -162,84 +162,102 @@
   }
 
   .section-2 {
-    padding: 93px 125px;
+    padding-top: 93px;
+    padding-bottom: 93px;
     color: #2f2f2f;
-    background: url('../../assets/img/platform_back.png') no-repeat center center;
-    background-size: 584px 304px;
-    background-position: top 100px right 110px;
+    justify-content: center;
+    display: flex;
 
     @media screen and (max-width: 600px) {
       padding-top: 49px;
-      padding-bottom: 250px;
-      padding-left: 0;
-      padding-right: 0;
+      padding-bottom: 50px;
+      padding-left: 30px;
+      padding-right: 30px;
       background-size: 272px 141px;
       background-position: top 410px left 50px;
+      display: block;
     }
 
-    &-title {
-      font-family: 'Graphik';
-      font-size: 50px;
-      line-height: 60px;
-      text-align: left;
-      margin-bottom: 29px;
+    &-1 {
+      &-title {
+        font-family: 'Graphik';
+        font-size: 50px;
+        line-height: 60px;
+        text-align: left;
+        margin-bottom: 29px;
 
-      .bold {
-        font-weight: bolder;
+        .bold {
+          font-weight: bolder;
+        }
+
+        @media screen and (max-width: 600px) {
+          font-size: 24px;
+          line-height: 50px;
+          color: #2f2f2f;
+          text-align: center;
+          margin-bottom: 10px;
+        }
       }
 
-      @media screen and (max-width: 600px) {
-        font-size: 24px;
-        line-height: 50px;
-        color: #2f2f2f;
-        text-align: center;
-        margin-bottom: 10px;
+      &-desc {
+        font-family: 'Graphik';
+        font-size: 18px;
+        line-height: 25px;
+        color: #696969;
+        margin-top: 28px;
+        margin-bottom: 32px;
+        width: 521px;
+
+        @media screen and (max-width: 600px) {
+          display: block;
+          width: 323px;
+          text-align: center;
+          margin-left: auto;
+          margin-right: auto;
+        }
+      }
+
+      &-button {
+        font-family: 'Graphik';
+        font-style: normal;
+        font-weight: bold;
+        font-size: 18px;
+        line-height: 23px;
+        color: #ffffff;
+        padding: 17px 30px;
+        background: #88d20f;
+        border-radius: 5px;
+        width: fit-content;
+        cursor: pointer;
+
+        @media screen and (max-width: 600px) {
+          font-size: 16px;
+          padding: 14px 19px;
+          margin-left: auto;
+          margin-right: auto;
+        }
+
+        &:hover {
+          background: #84b13c;
+        }
       }
     }
 
-    &-desc {
-      font-family: 'Graphik';
-      font-size: 18px;
-      line-height: 25px;
-      color: #696969;
-      margin-top: 28px;
-      margin-bottom: 32px;
-      width: 521px;
+    &-2 {
+      width: 38%;
+      height: auto;
+      margin-left: 85px;
+      background: url('../../assets/img/platform_back.png') no-repeat center center;
+      background-size: 100% 100%;
 
       @media screen and (max-width: 600px) {
-        display: block;
-        width: 323px;
-        text-align: center;
-        margin-left: auto;
-        margin-right: auto;
-      }
-    }
-
-    &-button {
-      font-family: 'Graphik';
-      font-style: normal;
-      font-weight: bold;
-      font-size: 18px;
-      line-height: 23px;
-      color: #ffffff;
-      padding: 17px 30px;
-      background: #88d20f;
-      border-radius: 5px;
-      width: fit-content;
-      cursor: pointer;
-
-      @media screen and (max-width: 600px) {
-        font-size: 16px;
-        padding: 14px 19px;
-        margin-left: auto;
-        margin-right: auto;
-      }
-
-      &:hover {
-        background: #84b13c;
+        margin: 40px 0 0 0;
+        width: 100%;
+        height: 142px;
       }
     }
   }
+
 
   .section-3 {
     background: white;
@@ -321,6 +339,7 @@
         font-size: 18px;
         line-height: 150%;
         color: #88d20f;
+        font-family: 'Graphik Semibold';
 
         @media screen and (max-width: 600px) {
           margin-top: 25px;
@@ -527,7 +546,7 @@
 
       @media screen and (max-width: 600px) {
         display: block;
-        width: 195px;
+        width: 205px;
         margin-left: auto;
         margin-right: auto;
       }
