assets page updated

--- a/src/assets/font/graphik/style.css
+++ b/src/assets/font/graphik/style.css
@@ -70,6 +70,12 @@
   font-weight: normal;
   src: local('Graphik Medium'), url('GraphikMedium.woff') format('woff');
 }
+@font-face {
+  font-family: 'Graphik Medium';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Graphik Medium'), url('GraphikMedium.woff') format('woff');
+}
 
 
 @font-face {
@@ -86,6 +92,7 @@
   font-weight: normal;
   src: local('Graphik Semibold'), url('GraphikSemibold.woff') format('woff');
 }
+
 
 
 @font-face {
