--- a/src/pages/assets/colours/style.scss
+++ b/src/pages/assets/colours/style.scss
@@ -73,47 +73,54 @@
 
       &-content {
         display: flex;
+        flex-wrap: wrap;
+
+        @media screen and (max-width: 600px) {}
+
+      }
+    }
+
+    .card {
+      width: 195px;
+      box-shadow: 1px 4px 7px rgba(0, 0, 0, 0.1);
+      margin: 10px;
+      z-index: -1;
+
+      @media screen and (max-width: 600px) {
+        width: 140px;
+      }
+
+      &-img {
+        border-radius: 5px 5px 0px 0px;
+        height: 143px;
 
         @media screen and (max-width: 600px) {
-          display: block;
+          height: 103px;
         }
+      }
 
-        .card {
-          width: 252px;
-          background: white;
-          margin: 30px;
-          border: none;
-          z-index: -1;
+      &-desc {
+        padding: 17px;
+        background: white;
+        border-radius: 0px 0px 5px 5px;
 
-          @media screen and (max-width: 600px) {
-            margin-top: 60px;
-            margin-left: auto;
-            margin-right: auto;
-            width: 200px;
-          }
-
-          &-img {
-            width: 100%;
-            height: 150px;
-            display: flex;
-            justify-content: center;
-            border-radius: 0;
-            box-shadow: 0px 20px 11px -4px rgba(0, 0, 0, 0.1);
-
-            @media screen and (max-width: 600px) {
-              height: 200px;
-            }
-          }
-
-          &-title {
-            font-family: 'Graphik';
-            font-size: 18px;
-            text-align: center;
-            line-height: 40px;
-            color: #6a6a6a;
-            margin-top: 20px;
-          }
+        @media screen and (max-width: 600px) {
+          padding: 13px;
         }
+      }
+
+      &-text {
+        font-family: 'Graphik';
+        font-size: 14px;
+        line-height: 15px;
+        color: #C0CCDA;
+      }
+
+      &-color {
+        font-family: 'Graphik';
+        font-size: 14px;
+        line-height: 15px;
+        color: #324376;
       }
     }
   }
