--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -10,7 +10,7 @@
   @media screen and (max-width: 600px) {
     padding: 0px;
     display: block;
-    height: 660px;
+    min-height: 690px;
   }
 
   &-col-1 {
