added ui changes WIP

--- a/src/pages/careers/style.scss
+++ b/src/pages/careers/style.scss
@@ -71,6 +71,7 @@
     &-title {
       font-family: 'Graphik';
       font-size: 36px;
+      font-weight: 900;
       line-height: 40px;
       text-align: left;
       color: #2f2f2f;
@@ -186,6 +187,7 @@
     &-title {
       font-family: 'Graphik';
       font-size: 36px;
+      font-weight: 900;
       line-height: 40px;
       text-align: center;
       color: #2f2f2f;
@@ -271,6 +273,7 @@
       font-family: 'Graphik';
       font-size: 36px;
       line-height: 40px;
+      font-weight: 900;
       text-align: center;
       color: #2f2f2f;
 
@@ -329,9 +332,7 @@
         }
 
         &-title {
-          font-family: Muli;
           font-style: normal;
-          font-weight: bold;
           font-size: 20px;
           line-height: 35px;
           color: #2f2f2f;
@@ -378,6 +379,7 @@
     &-title {
       color: #2b4403;
       font-family: 'Graphik';
+      font-weight: 900;
       font-size: 36px;
       line-height: 50px;
 
