--- a/src/components/testimonial/style.scss
+++ b/src/components/testimonial/style.scss
@@ -37,9 +37,11 @@
 		}
 
 		&-comment {
+			
 			font-family: 'Graphik';
-			font-size: 24px;
-			line-height: 26px;
+			font-size: 20px;
+			line-height: 6px;
+			font-weight: 500;
 			text-align: center;
 			margin-left: auto;
 			margin-right: auto;
