:zap: Worked on the mobile issues

--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -471,7 +471,9 @@
       text-align: center;
       padding-top: 43px;
     }
-
+    img{
+      width:100%;
+    }
     &-2 {
 
       &-title {
@@ -511,7 +513,7 @@
         display: flex;
 
         @media screen and (max-width: 600px) {
-          margin-top: 385px;
+          margin-bottom: 15px;
           width: 100%;
           display: flex;
           justify-content: center;
