fix background image sizing

--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -19,6 +19,7 @@
       @media screen and (max-width: 600px) {
         background: url('../../assets/img/hero_1_mobile.png') no-repeat center center;
         background-position: left 0 bottom 0;
+        background-size: contain;
       }
     }
 
