fix menu issues

--- a/src/components/hamburgermenu/style.scss
+++ b/src/components/hamburgermenu/style.scss
@@ -68,8 +68,7 @@
     display: grid;
 
     .ant-menu-submenu-title,
-    .ant-menu-item {
-      padding-top: 15px !important;
+    .ant-menu-item, a {
       padding-bottom: 15px !important;
       height: 70px !important;
       font-size: 20px !important;
@@ -87,6 +86,7 @@
 
     .ant-menu-submenu-arrow {
       width: 30px !important;
+      top: 20% !important;
     }
 
     .ant-menu-submenu-inline>.ant-menu-submenu-title .ant-menu-submenu-arrow::before {
