--- a/src/components/button/style.scss
+++ b/src/components/button/style.scss
@@ -5,6 +5,7 @@
 	padding-bottom: 21px;
 	font-family: 'Graphik';
 	font-size: 16px;
+	font-weight: 600;
 	line-height: 18px;
 	text-align: center;
 	letter-spacing: 0.01em;
