--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -77,7 +77,7 @@
   }
 
   &-col-2,
-  &-col-3 {
+  &-col-3, &-col-4 {
     font-family: 'Graphik';
 
     * {
@@ -104,6 +104,15 @@
 
   &-col-3 {
     margin-left: auto;
+    @media screen and (max-width: 600px) {
+      *:nth-child(n + 2) {
+        margin-top: 27px;
+      }
+    }
+  }
+
+  &-col-4 {
+    margin-left: auto;
     margin-right: auto;
 
     @media screen and (max-width: 600px) {
@@ -113,7 +122,7 @@
     }
   }
 
-  &-col-4 {
+  &-col-5 {
     margin-left: auto;
     width: 337px;
 
@@ -124,7 +133,13 @@
       width: 100%;
       padding: 20px;
     }
-
+    .social-links{
+      margin-top: 20px;
+      display: flex;
+      a{
+        margin-right: 20px;
+      }
+    }
     .subscribe-text {
       font-family: 'Graphik';
       font-size: 16px;
