fix subscribe button

--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -653,6 +653,7 @@
 
       .button {
         background: #7cb342;
+        font-weight: 600;
         border-radius: 0px 4px 4px 0px;
         color: white;
         text-align: center;
