fix subscribe button issues

--- a/src/components/button/style.scss
+++ b/src/components/button/style.scss
@@ -10,6 +10,7 @@
 	text-align: center;
 	letter-spacing: 0.01em;
 	color: white;
+	text-transform: uppercase;
 	cursor: pointer;
 
 	@media screen and (max-width: 600px) {
