--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -643,18 +643,19 @@
         padding-top: 14px;
         width: 280px;
 
+        @media screen and (max-width: 600px) {
+            padding: 15px;
+        }
+
         input {
           font-size: 14px;
           width: 240px;
           border: none;
           outline: none;
+          color: #2F2F2F;
         }
 
-        @media screen and (max-width: 600px) {
-          .email-input{
-            padding: 15px;
-          }
-        }
+       
       }
 
       .button {
@@ -667,6 +668,13 @@
         margin-left: 16px;
         padding-top: 14px;
         cursor: pointer;
+        @media screen and (max-width: 600px) {
+          padding: 15px;
+          align-items: center;
+          align-self: center;
+          margin-left: 0px;
+          margin-top: 15px;
+      }
       }
 
       .button:hover {
