--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -126,9 +126,33 @@
     margin-left: auto;
     width: 337px;
 
+    @media screen and (max-width: 768px) and (min-width: 601px){
+      margin: 0;
+      width: 200px;
+
+      .subscribe-text {
+        line-height: 150% !important;
+        width: 200px !important;
+      }
+
+      .subscribe-input {
+        flex-direction: column;
+
+        .subscribe-mail {
+          padding-top: 5px !important;
+          height: 35px !important;
+        }
+        .subscribe-button{
+          margin-left: 0px !important;
+          line-height: 35px !important;
+          margin-top: 10px !important;
+        }
+      }
+      
+    }
+
     @media screen and (max-width: 600px) {
       // display: none;
-      border-top: 1px solid #696969;
       margin: 0;
       width: 100%;
       padding: 20px;
@@ -205,6 +229,9 @@
     @media screen and (max-width: 600px) {
       display: none;
     }
+    @media screen and (max-width: 768px) and (min-width: 601px) {
+     font-size: 14px;
+    }
   }
 
   .chat-button {
@@ -217,6 +244,9 @@
       height: 100%;
     }
     @media screen and (max-width: 600px) {
+      display: none;
+    }
+    @media screen and (max-width: 768px) and (min-width: 601px){
       display: none;
     }
   }
