--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -18,6 +18,9 @@
       border-bottom: 0px;
       .ant-menu-item,.ant-menu-submenu{
         margin-right: 25px;
+        @media screen and (max-width: 768px) and (min-width: 601px){
+          margin-right: 0px;
+        }
         cursor: pointer;
         a{
           color: white;
@@ -179,6 +182,10 @@
       background-color: #fff;
       border: none !important;
       border-radius: 5px !important;
+
+      @media screen and (max-width: 768px) and (min-width: 601px){
+       line-height: 14px;
+      }
     }
     &.white {
       button{
@@ -441,6 +448,7 @@
     transition: all 1s ease;
     margin: auto 0 auto 16px;
     cursor: pointer;
+
     &.gray {
       button{
         background: white !important;
