fix issues on ipad 768px

--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -44,6 +44,11 @@
         font-size: 28px;
         line-height: 120%;
       }
+      @media screen and (max-width: 320px) {
+        font-size: 18px;
+        line-height: 120%;
+        margin-top: 50px;
+      }
     }
 
     &-desc {
@@ -82,6 +87,9 @@
         background: #fff;
         padding: 18px 40px;
 
+        @media screen and (max-width: 320px) {
+          line-height: 15px;
+        }
       }
     }
   }
